chache and content type for s3 assets

--- a/views/json.erb
+++ b/views/json.erb
@@ -1,12 +1,12 @@
 {
   'api': '0.11',
   'space': 'miLKlabs',
-  'logo': 'http://status.mlkl.bz/logo.png',
+  'logo': 'http:\/\/status.mlkl.bz\/logo.png',
   'icon': {
-    'open': 'http://status.mlkl.bz/open.png',
-    'closed': 'http://status.mlkl.bz/closed.png'
+    'open': 'http:\/\/status.mlkl.bz\/open.png',
+    'closed': 'http:\/\/status.mlkl.bz\/closed.png'
   },
-  'url': 'http://milklabs.ie',
+  'url': 'http:\/\/milklabs.ie',
   'address': 'Franciscan Friary, Lower Henry Street, Limerick',
   'contact': {
     'phone': '+353894569898',
