--- a/views/json.erb
+++ b/views/json.erb
@@ -15,6 +15,6 @@
   },
   'lat': 52.663965395,
   'lon': -8.62887561321,
-  'open': '<%= state[:open] %>',
+  'open': '<%= @state['open'] %>',
   'status': 'Join us'
 }
